# Makefile.am, passed: dox, extracted subdir: dox
# in dir /home/cowtan/clipper-autoconf/clipper-2.1/dox
## -*- mode: Makefile; mode: font-lock -*-


INCLUDES=${FFTW_CXXFLAGS}

library_includedir = $(pkgincludedir)

EXTRA_DIST = \
   class_overview.dox  \
      clipper.dox  \
      clipper_hierarchy.eps  \
      clipper_hierarchy.png  \
      container.eps  \
      container.png  \
      conventions.dox  \
      coordtypes.dox  \
      develop.dox  \
      develop_hkl.dox  \
      develop_map.dox  \
      develop_model.dox  \
      donors.eps  \
      donors.png  \
      hierarchy.eps  \
      hierarchy.png  \
      hier_rep.eps  \
      hier_rep.png  \
      hkl_objs.eps  \
      hkl_objs.png  \
      img_container.eps  \
      img_container.png  \
      include.eps  \
      include.png  \
      installation.dox  \
      map_p1.eps  \
      map_p1.png  \
      map_p2.eps  \
      map_p2.png  \
      minimol1.png  \
      minimol2.png  \
      minimol3.png  \
      wheretolook.dox 

