
# path to includes
AM_CPPFLAGS = -I../include

lib_LTLIBRARIES = libxc.la

libxc_la_SOURCES = config.cpp text.cpp uuid.cpp debug.cpp
#libxc_a_SOURCES = config.cpp symboltable.cpp tree.cpp \
#				  file.cpp pool.cpp system.cpp uuid.cpp time.cpp \
#				  debug.cpp error.cpp stream.cpp string.cpp text.cpp

